funcionalidad agregar amigos sugeridos

--- a/web/template/Egresado/circuloAmigos.html
+++ b/web/template/Egresado/circuloAmigos.html
@@ -101,7 +101,7 @@
                       <span>{{sugerencia.career}}</span></center>
                     </div>
                     <div class="col-lg-2 col-md-2 col-sm-3 align-self-center">
-                      <center><a href="#"><i class="fa fa-2x fa-heart" aria-hidden="true"></i></a></center>
+                      <center><a href="/dashboard_egresado/circulo_amigos?username={{usuario.dni}}&dni={{sugerencia.dni}}"><i class="fa fa-2x fa-heart" aria-hidden="true"></i></a></center>
                     </div>
                   </div>
                 </section>
