--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -69,6 +69,18 @@
   	.borde{
   		border: solid;
   	}
+
+  .tamañoMaximo{
+    display:block;
+    width:100%;
+    max-width:500px
+  }
+  .corazon{
+      border-radius: 100%;
+      width: 50px;
+      height: 50px;
+  }
+
   </style>
   <body>
       <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary ">
@@ -102,13 +114,15 @@
 				<div class="card-columns">
 				{% for actividad in actividades %}
 				<div class="card">
-				    <img class="card-img-top img-fluid" src="{{actividad.image_activity.url}}" alt="Card image cap">
+				    <img class="card-img-top img-fluid tamañoMaximo"  src="{{actividad.image_activity.url}}" alt="Card image cap">
 				    <div class="card-block">
 				      <h4 class="card-title">{{actividad.name}}</h4>
 				      <p class="card-text">{{actividad.description}}</p>
 				    </div>
 				  </div>
 				{% endfor %}
+				</div>
+			</div>
 			<!--PANEL DE AMIGOS-->
 			<div class="col-lg-2 col-md-3 hidden-sm-down">
 				<center><b><label>Amigos</label></b></center><hr>
@@ -142,7 +156,7 @@
 								<h6>{{sugerencia.user.first_name}} {{sugerencia.user.last_name}}</h6> 
 							</div>
 							<div class="col-lg-3 align-self-center ">
-								<a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a>
+								<a href="/dashboard_egresado?username={{usuario.dni}}&dni={{sugerencia.dni}}"><i class="fa fa-heart" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>
 					</div>
