--- a/web/template/Bases/BaseFormGraduated.html
+++ b/web/template/Bases/BaseFormGraduated.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   
 </head>
-    <style type="text/css">
+     <style>
+         .fotoPerfil{
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+       }
+    #categorias{
+      overflow-y: scroll;
+      height: 35vh;
+    }
       .caja{
         padding-bottom: 50px; 
         padding-top: 50px; 
