--- a/web/template/Root/CrearCategoria.html
+++ b/web/template/Root/CrearCategoria.html
@@ -39,20 +39,47 @@
 </section>
 
 
-{% if mensaje_o.0 %}
+      {% if mensaje_o.0 %}
+          <input id="valorMsgSuccess" style="display: none" value="{{mensaje.0}}">
 
-    <h3>{{mensaje_o.1}}</h3>
-  
-{% endif %}
+          <div class="modal fade" id="modalMsgSuccess">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                    <h3>{{mensaje_o.1}}</h3>
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div>        
+      {% endif %}
 
-{% if mensaje.0 %}
 
-	{% for error in mensaje.1  %}
+      {% if mensaje.0 %}
+          <input id="valorMsg" style="display: none" value="{{mensaje.0}}">
 
-		<h5>{{error}}</h5>
-		
-	{% endfor %}
-	
-{% endif %}
+          <div class="modal fade" id="modalMsg">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                    {% for error in mensaje.1  %}
+                        <h6>{{error}}</h6>
+                    {% endfor %}
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div>        
+      {% endif %}
+
+
 
 {% endblock category_root %}
