--- a/web/template/Root/DashBoardRoot.html
+++ b/web/template/Root/DashBoardRoot.html
@@ -2,6 +2,31 @@
 {% load staticfiles %}
 
 {% block contenido_root %}
+<nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand">!</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
+        <a class="nav-link" href="/aceptar_cuentas_admin?username={{usuario.username}}">Cuentas <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="/lista_categorias?username={{usuario.username}}">Categorias<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/dashboard_root?username={{usuario.username}}">Perfil</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
 <section class="container">
   <div class="row box">
     <div class="col-md-12 ">
@@ -18,21 +43,13 @@
         </div>
       </div>
       <div class="row box">
-        <div class="col">
-          <h5>Actividad reciente</h5><hr>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-9" id="reciente">  
-         
-        </div>
-        <div class="col-md-3">  
+        <div class="col-lg-12"><center>  
           <ul style="">
             <li><a href="/crear_categorias?username={{usuario.username}}">Crear categorías</a></li>
             <li><a href="/aceptar_cuentas_admin?username={{usuario.username}}">Gestión de cuentas</a></li>
             <li><a href="">Editar información</a></li>
             <li><a href="/logout">Cerrar sesión</a></li>
-          </ul>
+          </ul></center>
         </div>
       </div>
     </div>
