--- a/web/template/Root/eliminarCategorias.html
+++ b/web/template/Root/eliminarCategorias.html
@@ -3,29 +3,34 @@
 
 {% block category_root %}
 
+
   <section class="container" style="padding-top: 70px; padding-bottom: 20px;">
     <div class="row">
       <div class="col-lg-12">
         <center><h3>Eliminar Categorías</h3></center><hr><br>
         <div id="elminar">
           <ul class="list-group">
-            <li class="list-group-item">
+            
+
             <form method="POST"> {% csrf_token %}
+            {% for categoria in categorias  %}
+              <li class="list-group-item">
               <section class="container">
-                <div class="row">
-                {% for categoria in categorias  %}
+                <div class="row">                
                   <div class="col-lg-10 align-self-center">
                     <h6>{{categoria.name}}</h6>
                     <p>{{categoria.description}}</p>
                   </div>
                   <div class="col-lg-2 align-self-center">
                     <button type="submit" value="{{categoria.id}} Eliminar" name="tipo" class="btn btn-danger">Eliminar</button>
-                  </div>
-                  {% endfor %}
+                  </div>                  
                 </div>
               </section>
+              </li>
+              {% endfor %}
             </form>
-            </li>
+
+            
           </ul>
           {% if mensaje.0 %}
 
@@ -37,7 +42,7 @@
     </div>
     <div class="row" style="padding-top: 30px;">
       <div class="col-lg-12">
-        <center><button class="btn btn-primary" onclick="location.href='/lista_categorias?username={{usuario.username}}';">Cancelar</button></center>
+        <center><button class="btn btn-primary" onclick="location.href='/lista_categorias?username={{usuario.username}}';">Volver</button></center>
       </div>
     </div>
   </section>
