--- a/web/template/Egresado/circuloAmigos.html
+++ b/web/template/Egresado/circuloAmigos.html
@@ -79,7 +79,7 @@
                       <span>{{amigo.career.name}}</span></center>
                     </div>
                     <div class="col-lg-2 col-md-2 col-sm-3 align-self-center">
-                      <center><a href="#"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a></center>
+                      <center><a href="/dashboard_egresado/send_email?username={{usuario.dni}}&dni={{amigo.dni}}"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a></center>
                     </div>
                   </div>
                 </section>
