Plantilla de categoría creada

--- a/web/template/Root/CrearCategoria.html
+++ b/web/template/Root/CrearCategoria.html
@@ -31,7 +31,8 @@
         </div>
         <center>
           <button type="button" class="btn btn-danger" onclick="location.href='/lista_categorias?username={{usuario.username}}';" >Cancelar</button>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+
+          <button type="submit" class="btn btn-primary" onclick="location.href='/success_category?username={{usuario.username}}';" >Enviar</button>
         </center>
       </form>
     </div>
