--- a/web/template/Admin/crearActividades.html
+++ b/web/template/Admin/crearActividades.html
@@ -17,10 +17,10 @@
             </li>
 
 
-            <li class="nav-item ">
-              <a class="nav-link" href="/create_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
+            <li class="nav-item active ">
+              <a class="nav-link" href="/list_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
 
               <a class="nav-link" href="/dashboard_admin?dni={{usuario.dni}}">Perfil</a>
             </li>
@@ -72,26 +72,40 @@
                   <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="Descripcion de la actividad" required="True" name="description" type="text"></textarea>
                 </div>
 
-                <center><button type="submit" class="btn btn-primary">Enviar</button></center>
+                <center>
+                  <button type="button" class="btn btn-danger" onclick="location.href='/list_activity?dni={{usuario.dni}}';">Cancelar</button>
+
+                  <button type="submit" class="btn btn-primary">Enviar</button>
+                </center>
             </form>
         </div>
       </div>
     </section>
 
+      {% if mensaje_o.0 %}
+          <h5>{{mensaje_o.1}}</h5>        
+      {% endif %}
+
+      {% if mensaje.0 %}
+          <input id="valorCreation" style="display: none" value="{{mensaje.0}}">
+
+          <div class="modal fade" id="modalCreation">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                   {% for error in mensaje.1  %}                      
+                      <h6>{{error}}</h6>                      
+                    {% endfor %}
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div>        
+      {% endif %}
 
 
-
-{% if mensaje_o.0 %}
-
-    <h5>{{mensaje_o.1}}</h5>
-  
-{% endif %}
-
-{% if mensaje.0 %}
-{% for error in mensaje.1  %}
-    
-    <h5>{{error}}</h5>
-    
-  {% endfor %}  
-{% endif %}
 {% endblock contenido_admin %}
