--- a/web/template/Admin/editarActividad.html
+++ b/web/template/Admin/editarActividad.html
@@ -61,17 +61,34 @@
                     <textarea value="{{actividad.description}}"  class="form-control" id="exampleTextarea" rows="3" placeholder="Descripcion de la actividad" required="True" name="description" type="text">{{actividad.description}}</textarea>
                   </div>
 
-                  <center><button type="submit" class="btn btn-primary">Guardar</button></center>
+                  <center> 
+                    <button type="button" class="btn btn-danger" onclick="location.href='/list_activity?dni={{usuario.dni}}';">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                  </center>
               </form>
           </div>
         </div>
-
-        {% if mensaje.0 %}
-
-            {% for mensaje in mensaje.1  %}
-                    <h4>{{mensaje}}</h4>              
-            {% endfor %}
-          
-        {% endif %}
       </section>
+
+      {% if mensaje.0 %}
+          <input id="valorEdit" style="display: none" value="{{mensaje.0}}">
+
+          <div class="modal fade" id="modalEdit">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                   {% for error in mensaje.1  %}                      
+                      <h6>{{error}}</h6>                      
+                    {% endfor %}
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div>        
+      {% endif %}
+
 {% endblock contenido_admin %}
