--- a/web/template/Admin/listaActividades.html
+++ b/web/template/Admin/listaActividades.html
@@ -16,7 +16,7 @@
               <a class="nav-link" href="/aceptar_cuentas?dni={{usuario.dni}}">Cuentas <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/create_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/list_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/dashboard_admin?dni={{usuario.dni}}">Perfil</a>
@@ -31,16 +31,19 @@
         </div>
       </nav>
 
+      <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary" style="padding-top: 70px;">
+        <div><a class="navbar-brand" href="/create_activity?dni={{usuario.dni}}">Crear Actividad</a></div>
+      </nav>
+
 
     <form method="POST"> {% csrf_token %}
-    <section class="container" style="padding-top: 70px;">
+    <section class="container" style="padding-top: 20px;">
       <div class="row">
         <div class="col-lg-12">
 
           <!--AQUI VIENE EL FOR-->
-
-          <div class="card" style="padding-bottom: 40px;">
           {% for actividad in actividades  %}
+          <div class="card" style="padding-bottom: 40px;">
           <section class="container">
             <div class="row">
               <div class="col-lg-12">
@@ -57,19 +60,22 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12 align-self-center">
                 <center>
-                  <button  type="submit" value="{{actividad.id}} Eliminar" name="tipo" class="btn btn-danger">Eliminar</button>
-                  </form>
+                  <button  type="submit" value="{{actividad.id}} Eliminar" name="tipo" class="btn btn-danger">Eliminar</button>                  
                   <button type="button" onclick="location.href='/edit_activity?id={{actividad.id}}&dni={{usuario.dni}}';" class="btn btn-success">Editar</button>
                 </center>
                 </div>
               </div> 
           </section>
-          {% endfor %}
           </div>
-
+          {% endfor %}
           <!--END FOR-->
 
         </div>
       </div>
     </section>
+    </form>
+
+
+
+    
 {% endblock contenido_admin %}
