--- a/web/template/Egresado/perfilEgresado.html
+++ b/web/template/Egresado/perfilEgresado.html
@@ -2,7 +2,8 @@
 {%load staticfiles%}
 
 {% block contenido_egresado %}
-            <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary ">
+        <title>Perfil Egresado</title>
+        <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary ">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +34,7 @@
       <section class="container" style="padding-top: 130px; padding-bottom: 50px;">
         <div class="row">          
           <div class="col-lg-3 align-self-center" >
-            <center><img class="fotoPerfil" src=""></center>
+            <center><img class="fotoPerfil" src="{{usuario.profile_picture.url}}"></center>
           </div>
         
 
