--- a/web/template/FormatosCorreo/FormatoPasswordAdmin.html
+++ b/web/template/FormatosCorreo/FormatoPasswordAdmin.html
@@ -5,7 +5,7 @@ Para nosotros es un placer tenerte en nuestra comunidad de egresados , tu cuenta
 Click en el siguiente link para iniciar se sesión
 {% block reset_link %}
 
-https://{{ domain }}{% url 'web:login_admin'%}
+http://{{ domain }}{% url 'web:login_admin'%}
 {% endblock reset_link %}
 Tu contraseña es : {{password}}
 
