--- a/web/template/Admin/crearActividades.html
+++ b/web/template/Admin/crearActividades.html
@@ -35,7 +35,7 @@
       </nav>
 
 
-    <section class="container" style="padding-top: 70px;">
+    <section class="container" style="padding-top: 70px; padding-bottom: 40px;">
       <div class="row">
         <div class="col-lg-12">
           <center><h3>Crear Actividad</h3></center><hr><br>
