--- a/web/template/Admin/editarActividad.html
+++ b/web/template/Admin/editarActividad.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
 
-      <section class="container" style="padding-top: 70px;">
+      <section class="container" style="padding-top: 70px; padding-bottom: 40px;">
         <div class="row">
           <div class="col-lg-12">
             <center><h3>Editar Actividad</h3></center><hr><br>
