--- a/web/template/Egresado/editarInfo.html
+++ b/web/template/Egresado/editarInfo.html
@@ -39,11 +39,6 @@
               <div class="col-sm-5 col-md-5 col-lg-3">
                  <center>
                   <img class="circular" src="{{usuario.profile_picture.url}}">
-                  <div class="form-group">
-                    <label for="exampleInputFile">Subir</label>
-                    <input type="file" class="form-control-file" id="exampleInputFile" name="profile_picture" aria-describedby="fileHelp">
-                    <small id="fileHelp" class="form-text text-muted">Seleccionar archivo para cambiar foto de perfil</small>
-                  </div>
                 </center>
               </div>
               <div class="col-sm-7 col-md-7 col-lg-9 ">
@@ -65,6 +60,13 @@
                   <p class="sangria">Egresado: {{usuario.graduation_year}}</p>
                 </div>
 
+                <div>
+                  <div class="form-group">
+                    <input type="file" class="form-control-file" id="exampleInputFile" name="profile_picture" aria-describedby="fileHelp">
+                    <small id="fileHelp" class="form-text text-muted">Seleccionar archivo para cambiar foto de perfil</small>
+                  </div>
+                </div>
+
                 <div class="form-group row">
                   <label for="example-email-input" class="col-2 col-form-label">Email</label>
                   <div class="col-10">
@@ -84,26 +86,27 @@
                       </select>
                     </div>
                 </div>
+
                 <div id="cat">
                   <ul class="list-group">
                   {% for categoria in categorias  %}
                     {% if categoria in categoria_g %}
                           <li class="list-group-item">
-                                <div class="form-check">
-                                  <label class="form-check-label">
-                                    <input multiple="multiple" class="form-check-input" type="checkbox" name="categorias" id="categorias" value="{{categoria.id}}" checked>
-                                    {{categoria.name}}
-                                  </label>
-                                </div>
+
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" multiple="multiple"   name="categorias" id="categorias" value="{{categoria.id}}" checked>
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">{{categoria.name}}</span>
+                            </label>
+
                             </li> 
                     {% else %}
-                    <li class="list-group-item">
-                            <div class="form-check">
-                              <label class="form-check-label">
-                                <input multiple="multiple" class="form-check-input" type="checkbox" name="categorias" id="categorias" value="{{categoria.id}}">
-                                {{categoria.name}}
-                              </label>
-                            </div>
+                          <li class="list-group-item">
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" multiple="multiple"   name="categorias" id="categorias" value="{{categoria.id}}">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">{{categoria.name}}</span>
+                            </label>
                         </li>
                     {% endif %} 
                     {% endfor %}
@@ -122,4 +125,23 @@
           </div>
         </div>
       </section>
+
+      {% if mensaje.0 %} 
+          <input id="valorCheckBox" style="display: none" value="{{mensaje.0}}">
+          <div class="modal fade" id="modalCheckBox">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                  <center>
+                        <h6>{{mensaje.1}}</h6>
+                  </center>
+                </div>
+              </div>
+            </div>
+          </div> 
+        {% endif %}
+
 {% endblock contenido_egresado %}
