--- a/web/template/Admin/DashBoardAdmin.html
+++ b/web/template/Admin/DashBoardAdmin.html
@@ -35,7 +35,7 @@
             <div class="row">
             {% if not usuario.profile_picture  %}
               <div class="col-sm-5 col-md-5 col-lg-3 ">
-                <img class="circular" src="">
+                <img class="circular" src={% static "varios/perfil.jpg" %}>
               </div>
             {% else %}
              <div class="col-sm-5 col-md-5 col-lg-3 ">
