--- a/web/template/Egresado/editarInfo.html
+++ b/web/template/Egresado/editarInfo.html
@@ -36,11 +36,15 @@
 
           <form method="POST" enctype="multipart/form-data" >{% csrf_token %}
             <div class="row"> 
-              <div class="col-sm-5 col-md-5 col-lg-3">
-                 <center>
-                  <img class="circular" src="{{usuario.profile_picture.url}}">
-                </center>
-              </div>
+              {% if not usuario.profile_picture %}
+                  <div class="col-lg-3 align-self-center" >
+                    <center><img class="fotoPerfil" src={% static "varios/perfil.jpg" %}></center>
+                  </div>
+              {% else %}
+                  <div class="col-lg-3 align-self-center" >
+                    <center><img class="fotoPerfil" src="{{usuario.profile_picture.url}}"></center>
+                  </div>    
+              {% endif %}  
               <div class="col-sm-7 col-md-7 col-lg-9 ">
                 <center><h3>{{usuario.user.first_name}} {{usuario.user.last_name}}</h3><hr><br></center>
 
