success enviar correo

--- a/web/template/Egresado/enviarCorreo.html
+++ b/web/template/Egresado/enviarCorreo.html
@@ -14,7 +14,7 @@
               <a class="nav-link " href="/dashboard_egresado?username={{usuario.dni}}">Inicio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link active" href="circulo_amigos?username={{usuario.dni}}">Amigos<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/dashboard_egresado/circulo_amigos?username={{usuario.dni}}">Amigos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link " href="#">Perfil<span class="sr-only">(current)</span></a>
