--- a/web/template/ChangePassword.html
+++ b/web/template/ChangePassword.html
@@ -9,7 +9,7 @@
           <div class="col-sm-12 col-md-12 col-lg-10 align-self-center">
             <center>
                <div>
-                <h3 style="color:white;">Creación de contraseña</h3>          
+                <h3 style="color:white;">Creación de contraseña</h3><br>     
               </div>
             
               <form method="POST"> {% csrf_token %}
@@ -17,9 +17,9 @@
 
                   <input type="password" name="password" placeholder="Ingrese Contraseña" class="PASS">
                   <input type="password" name="password2" placeholder="Ingrese de nuevo contraseña">
-                </div><span class="emsg hidden" id="pass">contraseña de 6 a 10 dígitos con almenos una mayúscula y un número</span>
+                </div><center><span class="emsg hidden" id="pass">contraseña de 6 a 10 dígitos con almenos una mayúscula y un número</span><br>
 
-                <button type="submit" style="background-color: #3a906d; color:white;" class="btn btn-primary" >Enviar</button>     
+                <button type="submit" style="background-color: #3a906d; color:white;" class="btn btn-primary" >Enviar</button></center>     
                   {% if error.0 %}
                       <h3 style="color:white;">{{error.1}}</h3>
                   {% endif %}
