--- a/web/template/Egresado/registroExitoso.html
+++ b/web/template/Egresado/registroExitoso.html
@@ -6,10 +6,10 @@
 <section class="container-fluid box" style="min-height: 100vh">
 	<section class="container" style="min-height: 100vh">      
       <div class="row justify-content-center" style="padding-top: 100px;">
-      	<div class="col-lg-6 align-self-center" style="border: solid;">
+      	<div class="col-lg-6 align-self-center" style="border: solid; background-color: white;">
       		<div style="padding: 70px;">
 	      		<center>
-	      		<h1 style="color:white; text-shadow: 2px 4px black;">¡ Registro Exitoso !</h1><br>
+	      		<h1 style="color:black;">¡ Registro Exitoso !</h1><br>
 	      		<button type="button" class="btn btn-success colorbtn"  onclick="location.href='/';">Inicio</button>
 		  		</center>
 	  		</div>
