--- a/web/template/Admin/crearActividades.html
+++ b/web/template/Admin/crearActividades.html
@@ -72,6 +72,22 @@
                   <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="Descripcion de la actividad" required="True" name="description" type="text"></textarea>
                 </div>
 
+                <div class="form-group row">
+                  <label for="example-date-input" class="col-2 col-form-label">Fecha</label>
+                  <div class="col-10">
+                    <input class="form-control" type="date" value="2017-12-12" id="example-date-input">
+                  </div>
+                </div>
+
+                <div class="form-group row">
+                  <label for="example-time-input" class="col-2 col-form-label">Hora</label>
+                  <div class="col-10">
+                    <input class="form-control" type="time" value="13:45:00" id="example-time-input">
+                  </div>
+                </div>
+
+
+
                 <center>
                   <button type="button" class="btn btn-danger" onclick="location.href='/list_activity?dni={{usuario.dni}}';">Cancelar</button>
 
