agregando actividades y dando estilo

--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -128,6 +128,7 @@
 				    <div class="card-block">
 				      <h4 class="card-title">{{actividad.name}}</h4>
 				      <p class="card-text">{{actividad.description}}</p>
+				      <p class="card-text"><small class="text-muted">Categoria : {{actividad.category.name}}</small></p>
 				      <p class="card-text"><small class="text-muted">Fecha y Hora de Realización : {{actividad.date_activity}} , {{actividad.time_activity}}</small></p>
 				      <p class="card-text"><small>Fecha Creación: {{actividad.date_creation}}</small></p>
 				      <p class="card-text"><small>Fecha Ultima Modificación: {{actividad.last_modification}}</small></p>
